@@ -19,7 +19,6 @@ BUNDLE_ID = "org.opensciencetools.psychopy"
 USERNAME = "admin@opensciencetools.org"
 
 SIGN_ALL = True
-NOTARIZE = True
 
 # handy resources for info:
 #
@@ -37,7 +36,7 @@ class AppSigner:
         self.version = version
         self.destination = destination
         self._zipFile = None #'/Users/lpzjwp/code/psychopy/git/dist/PsychoPy3_2020.2.3.zip'
-        self._appNotarizeUUID = None #'4f48ef26-8cf2-499b-a3ad-4b788c19e11e'
+        self._appNotarizeUUID = None
         self._dmgBuildFile = None
 
     def signAll(self):
@@ -151,6 +150,7 @@ class AppSigner:
         self._appNotarizeUUID = uuid
         print(f'Uploaded file {filename} in {time.time()-t0:.03f}s: {uuid}')
         print(f'Upload to Apple completed at {time.ctime()}')
+        sys.stdout.flush()
         return uuid
 
     @property
@@ -210,6 +210,8 @@ class AppSigner:
         if exitcode != 0:
             print('*********Staple failed*************')
             exit(1)
+        else:
+            print(f"Staple successful. You can verify with\n    xcrun stapler validate {filepath}")
 
     def checkAppleLogFile(self):
         cmdStr = f"xcrun altool --notarization-info {self._appNotarizeUUID} -u {USERNAME} -p {PWORD}"
@@ -247,6 +249,8 @@ class AppSigner:
                     'window_rect': ((600, 600), (500, 400)),
                 },
         )
+        print(f"building dmg file complete")
+        sys.stdout.flush()
         return dmgFilename
 
     def dmgStapleInside(self):
@@ -256,12 +260,14 @@ class AppSigner:
         # staple the file inside the dmg
         cmdStr = f"hdiutil attach '{dmgFilename}'"
         exitcode, output = subprocess.getstatusoutput(cmdStr)
+        # subprocess.getstatusoutput("say 'waiting' --voice=Kate")
+        time.sleep(10)
         volName = output.split('\t')[-1]
         self.staple(f"'{volName}/{appName}'")
         cmdStr = f"hdiutil detach '{volName}' -quiet"
         print(f'cmdStr was: {cmdStr}')
         for n in range(5):  # if we do this too fast then it fails. Try 5 times
-            time.sleep(5)
+            time.sleep(10)
             exitcode, output = subprocess.getstatusoutput(cmdStr)
             print(output)
             if exitcode == 0:
@@ -300,40 +306,65 @@ def main():
                         action='store', required=False, default=defaultVersion)
     parser.add_argument("--file", help="path for a single file to be signed",
                         action='store', required=False, default=None)
+    parser.add_argument("--skipnotarize", help="path for a single file to be signed",
+                        action='store', required=False, default=None)
+    parser.add_argument("--runPreDmgBuild", help="Runs up until dmg is built (and notarised) then exits",
+                        action='store', required=False, default='true')
+    parser.add_argument("--runPostDmgBuild", help="Runs up until dmg is built (and notarised) then exits",
+                        action='store', required=False, default='true')
     args = parser.parse_args()
+    args.runPreDmgBuild = args.runPreDmgBuild.lower() in ['true', 'True', '1', 'y', 'yes']
+    args.runPostDmgBuild = args.runPostDmgBuild.lower() in ['true', 'True', '1', 'y', 'yes']
+
+    if args.skipnotarize:
+        NOTARIZE = False
+    else:
+        NOTARIZE = True
+
     if args.file:  # not the whole app - just sign one file
         distFolder = (thisFolder / '../dist').resolve()
         signer = AppSigner(appFile='',
                            version=None)
         signer.signSingleFile(args.file, removeFailed=False, verbose=True)
         signer.signCheck(args.file, verbose=True)
+
+        if NOTARIZE:
+            signer.upload(args.file)
+            # notarize and staple
+            signer.awaitNotarized()
+            signer.staple(args.file)
+
     else:  # full app signing and notarization
         distFolder = (thisFolder / '../dist').resolve()
         signer = AppSigner(appFile=distFolder/args.app,
-                           version=args.version)
-        if SIGN_ALL:
-            signer.signAll()
-        signer.signCheck(verbose=False)
+                        version=args.version)
 
-        if NOTARIZE:
-            signer.upload(signer.zipFile)
-            # build the read/writable dmg file while waiting for notarize
-            signer.dmgBuild()
-            # notarize and staple
-            signer.awaitNotarized()
-            signer.dmgStapleInside()
-        else:
-            # just build the dmg
-            signer.dmgBuild()
+        if args.runPreDmgBuild:
+            if SIGN_ALL:
+                signer.signAll()
+            signer.signCheck(verbose=False)
 
-        dmgFile = signer.dmgCompress()
-        signer.signSingleFile(dmgFile, removeFailed=False, verbose=True)
+            if NOTARIZE:
+                signer.upload(signer.zipFile)
+                # build the read/writable dmg file while waiting for notarize
+                signer.dmgBuild()
+                # notarize and staple
+                signer.awaitNotarized()
+            else:
+                # just build the dmg
+                signer.dmgBuild()
 
-        if NOTARIZE:
-            signer.upload(dmgFile)
-            # notarize and staple
-            signer.awaitNotarized()
-            signer.staple(dmgFile)
+        if args.runPostDmgBuild:
+            signer.dmgStapleInside()  # doesn't require UUID
+
+            dmgFile = signer.dmgCompress()
+            signer.signSingleFile(dmgFile, removeFailed=False, verbose=True)
+
+            if NOTARIZE:
+                signer.upload(dmgFile)
+                # notarize and staple
+                signer.awaitNotarized()
+                signer.staple(dmgFile)
 
 
 if __name__ == "__main__":
