@@ -45,8 +45,9 @@ for i in todo; do
     echo "stripping i386 using ditto"
     ditto --arch x86_64 dist/${names[$i]}__fat.app dist/${names[$i]}.app
 
-    # built and stripped. Now mac codesign
-    ${pythons[$i]} building/apple_sign.py --app "${names[$i]}.app"
+    # built and stripped. Now mac codesign. Running in 2 steps to allow the detach step to work
+    ${pythons[$i]} building/apple_sign.py --app "${names[$i]}.app" --runPostDmgBuild 0
+    ${pythons[$i]} building/apple_sign.py --app "${names[$i]}.app" --runPreDmgBuild 0
 
     # mount the disk image and delete previous copy of app
 #    echo "cp -R ${names[$i]}.app /Volumes/PsychoPy"
@@ -58,7 +59,7 @@ for i in todo; do
 #    hdiutil convert "StandalonePsychoPy3_tmpl.dmg" -format UDZO -o $dmgName
 
     osascript -e "set Volume 0.2"
-    say -v karen "Finished building for ${pythons[$i]}"
+    say -v kate "Finished building for ${pythons[$i]}"
 done
 
 osascript -e "set Volume 0.2"
